# lab4a

./: BinaryTree.c  BinaryTree.h  Boolean.h  CMakeLists.txt  IOUtils.h  TreeGen2.c  TreeGen3.c  TreeGenerated.c  main.c  main2.c
4a/: BinaryTree.c  BinaryTree.h  CMakeLists.txt  DotIntegration.c  DotIntegration.h  IOUtils.c  main.c  main2.c  mainWithDialog.c
